--- a/package.json
+++ b/package.json
@@ -30,13 +30,13 @@
     "react-dom": "~16.2.0"
   },
   "devDependencies": {
-    "babel-cli": "~6.26.0",
-    "babel-eslint": "~8.1.0",
-    "babel-plugin-transform-class-properties": "~6.24.1",
-    "babel-plugin-transform-object-rest-spread": "~6.26.0",
-    "babel-preset-env": "~1.6.0",
-    "babel-preset-react": "~6.24.1",
-    "babel-preset-react-optimize": "~1.0.1",
+    "babel-cli": "latest",
+    "babel-eslint": "latest",
+    "babel-plugin-transform-class-properties": "latest",
+    "babel-plugin-transform-object-rest-spread": "latest",
+    "babel-preset-env": "latest",
+    "babel-preset-react": "latest",
+    "babel-preset-react-optimize": "latest",
     "standard": "latest"
   },
   "engines": {
