--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "react-component"
   ],
   "dependencies": {
-    "prop-types": "^15"
+    "prop-types": "~15.5.4"
   },
   "devDependencies": {
     "babel-cli": "latest",
@@ -40,8 +40,7 @@
     "standard": "latest"
   },
   "engines": {
-    "node": ">= 8",
-    "react": ">= 16 < 17"
+    "node": ">= 8"
   },
   "files": [
     "dist"
@@ -53,6 +52,9 @@
     "test": "exit 0"
   },
   "license": "MIT",
+  "peerDependencies": {
+    "react": ">= 16 < 17"
+  },
   "standard": {
     "globals": [
       "React"
