--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "react-component"
   ],
   "dependencies": {
-    "prop-types": "~15.6.1"
+    "prop-types": "15"
   },
   "devDependencies": {
     "babel-cli": "latest",
