--- a/.babelrc
+++ b/.babelrc
@@ -1,20 +1,29 @@
 {
-  "presets": [
-    ["env", {
-      "modules": false,
-      "targets": { "browsers": ["last 2 versions", "ie >= 9"] }
-    }],
-    "react"
-  ],
-  "plugins": [
-    "transform-object-rest-spread",
-    "transform-class-properties"
-  ],
   "env": {
     "production": {
       "presets": [
         "react-optimize"
       ]
     }
-  }
+  },
+  "plugins": [
+    "transform-class-properties",
+    "transform-object-rest-spread"
+  ],
+  "presets": [
+    [
+      "env",
+      {
+        "modules": false,
+        "targets": {
+          "browsers": [
+            ">0.25%",
+            "not ie 11",
+            "not op_mini all"
+          ]
+        }
+      }
+    ],
+    "react"
+  ]
 }
